--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.35.0",
     "react-leaflet": "^4.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
