--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "immutability-helper": "^3.1.1",
     "leaflet": "^1.8.0",
+    "lodash.debounce": "^4.0.8",
     "postcss-cli": "^10.0.0",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
